logs/go_to_poi/build.make.016.log.stderr
/home/hyun1270/competition_ws/woohyun_ws/src/go_to_poi/src/talker_pose.cpp: In function ‘int main(int, char**)’:
/home/hyun1270/competition_ws/woohyun_ws/src/go_to_poi/src/talker_pose.cpp:17:17: error: expected ‘;’ before ‘return’
     ros::spin() return 0;
                 ^~~~~~
make[2]: *** [CMakeFiles/talker_pose.dir/src/talker_pose.cpp.o] Error 1
make[1]: *** [CMakeFiles/talker_pose.dir/all] Error 2
make: *** [all] Error 2
